--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 .success {
     border: 1px solid $sucess !important;
-    background-color: $background-sucess !important;
+    background-color: $background-success !important;
 }
 
 .error {
