--- a/src/components/Admin/Users/ListUsers/ListUsers.scss
+++ b/src/components/Admin/Users/ListUsers/ListUsers.scss
@@ -20,7 +20,7 @@
         background-color: #ffff;
         padding: 10px 20px;
 
-        -ant-list-item-meta {
+        .ant-list-item-meta {
             display: flex;
             align-items: center;
         }
