--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -25,10 +25,10 @@ $background-grey-light: #e8e8e8;
 $background-grey: #808080;
 $background-grey-dark: #595959;
 $background-dark-light: #252527;
-$background-dark: #252527;
+$background-dark: #000;
 $background-error: #ff00001f;
-$background-sucess: #84b84c1f;
-$background-dark-web: #090d11;
+$background-success: #84b84c1f;
+$background-dark-web: #16202b;
 $background-dark-light-web: #1a2734;
 
 $sucess: #84b84c;
